--- a/public/index.html
+++ b/public/index.html
@@ -948,47 +948,216 @@
   }
 
   // ========= 匯出 Excel =========
+ <script>
+  // ====== 新增：中文金額（新台幣） ======
+  function ntToChinese(n) {
+    // 只取整數
+    const num = Math.round(Number(n) || 0);
+    if (num === 0) return '零元整';
+    const cnNums = ['零','壹','貳','參','肆','伍','陸','柒','捌','玖'];
+    const cnIntRadice = ['','拾','佰','仟'];
+    const cnIntUnits = ['','萬','億','兆'];
+    let integerNum = String(num);
+    let chineseStr = '';
+    let zeroCount = 0;
+    for (let i = 0; i < integerNum.length; i++) {
+      const n = integerNum.charCodeAt(i) - 48;
+      const p = integerNum.length - i - 1;
+      const q = Math.floor(p / 4);
+      const m = p % 4;
+      if (n === 0) {
+        zeroCount++;
+        if (m === 0 && zeroCount < 4) {
+          chineseStr += cnIntUnits[q];
+          zeroCount = 0;
+        }
+      } else {
+        if (zeroCount > 0) chineseStr += '零';
+        zeroCount = 0;
+        chineseStr += cnNums[n] + cnIntRadice[m];
+        if (m === 0) chineseStr += cnIntUnits[q];
+      }
+    }
+    return '新台幣' + chineseStr + '元整';
+  }
+
+  // ====== 新增：把我們的 PRICING_STATE 類別對應成「類似範本的章節名稱」與序號 ======
+  const CHAPTER_TITLE_MAP = {
+    '木作工程': '木作工程',
+    '床架': '櫃體工程',
+    '系統櫃': '櫃體工程',
+    '鋁框吊框': '鋁框工程',
+    '高門框': '鋁框工程',
+    '鐵件拉門': '鋁框工程',
+    '石作工程': '石材及大板加工',
+    '特殊漆工程': '油漆工程',
+    '鐵件工程': '鐵件極鍍鈦工程',
+    '金屬工程': '鐵件極鍍鈦工程',
+    '其他單價項目': '其他工程',
+    '開關面板': '水電工程',
+    '自動項目': '自動項目' // 會另行處理監工/稅額/其他% 是否列入表格
+  };
+  const CN_ORDER = ['壹','貳','參','肆','伍','陸','柒','捌','玖','拾','拾壹','拾貳','拾參','拾肆','拾伍','拾陸','拾柒','拾捌','拾玖','貳拾'];
+
+  // ====== 新增：輔助：從 description 嘗試抓出「單位」 ======
+  function guessUnitFromDesc(desc) {
+    if (!desc) return '';
+    // 例如 "3尺 × 2500" / "2樘 × 33000" / "1空間 × 4500"
+    const m = String(desc).match(/^\s*\d+(?:\.\d+)?\s*([^\d×x\* ]+)\s*[×x\*]/);
+    return m ? m[1].trim() : '';
+  }
+
+  // ====== 這段替換原本的 exportToExcel() ======
   function exportToExcel() {
+    // 先確保最新價格
     calculatePricing();
-    const clientData = [
-      ["客戶名稱", document.getElementById('client_name').value || '未填寫'],
-      ["報價日期", document.getElementById('date').value || '未填寫'],
-      ["地址", document.getElementById('address').value || '未填寫'],
-      ["風格", getStyleValue()],
-      ["房型", getRoomTypeValue()],
-      ["基準坪數", document.getElementById('base_ping').value || '0']
+
+    // 取頁首資料
+    const company = '藝瓦室內裝修設計工程股份有限公司';
+    const contact = '高 雄 市 鼓 山 區 美 術 東 二 路 80 號                 TEL：07-5866700             FAX：07-5866703';
+    const title   = '工 程 預 估';
+
+    const client  = document.getElementById('client_name').value || '';
+    const dateISO = document.getElementById('date').value || '';
+    const dateStr = dateISO ? (dateISO.replace(/-/g,'/').replace(/^(\d{4})/, (y)=> String(Number(y)-1911))) : ''; // 轉民國年：114/08/10
+
+    const addr    = document.getElementById('address').value || '';
+    const basePing= document.getElementById('base_ping').value || '';
+
+    // 小計/稅/總計 直接用畫面現有值，避免與 UI 規則不一致
+    const subtotal     = Math.round(Number(PRICING_STATE.total) || 0) - 
+                         Math.round(Number(String(document.getElementById('tax').value).replace(/[^\d.-]/g,'')) || 0);
+    const tax          = Math.round(Number(String(document.getElementById('tax').value).replace(/[^\d.-]/g,'')) || 0);
+    const grandTotal   = Math.round(Number(String(document.getElementById('total-price').textContent).replace(/[^\d.-]/g,'')) || 0);
+
+    // 依章節（類別）分組，並把自動項目中「監工/稅額」先排除，避免在表內+表尾重複
+    const groupsRaw = {};
+    (PRICING_STATE.items || []).forEach(it => {
+      const cat = CHAPTER_TITLE_MAP[it.category] || it.category || '其他工程';
+      if (!groupsRaw[cat]) groupsRaw[cat] = [];
+      // 跳過稅額(5%)，因為表尾有「稅額」；監工費可保留或獨立一章節
+      if (it.category === '自動項目' && /稅額/i.test(it.name)) return;
+      groupsRaw[cat].push(it);
+    });
+
+    // 若自動項目裡有監工費，獨立章節「監工費8%~10%」
+    const supervisionItem = (PRICING_STATE.items || []).find(i => i.category === '自動項目' && /監工費/i.test(i.name));
+    if (supervisionItem) {
+      groupsRaw['監工費8%~10%'] = [supervisionItem];
+    }
+
+    // 章節排序：照我們遇到的順序，但前面加上常見章節
+    const PREFERRED_ORDER = [
+      '木作工程','櫃體工程','天花板工程','油漆工程','水電工程',
+      '石材及大板加工','玻璃工程','鐵件極鍍鈦工程','鋁框工程','其他工程',
+      '自動項目','監工費8%~10%'
+    ];
+    const seen = new Set(Object.keys(groupsRaw));
+    const orderedCats = PREFERRED_ORDER.filter(c => seen.has(c))
+      .concat([...seen].filter(c => !PREFERRED_ORDER.includes(c)));
+
+    // === 組 AoA ===
+    const rows = [];
+    // 抬頭三行
+    rows.push([company]);
+    rows.push([contact]);
+    rows.push([title]);
+    // 業主/日期
+    rows.push([`業主 : ${client}`, '', '', '', `日期：${dateStr}`]);
+    // 可加地址/坪數（視需要）
+    if (addr || basePing) {
+      rows.push([`地址：${addr}`, '', '', '', `坪數：${basePing}`]);
+    } else {
+      rows.push([]);
+    }
+
+    // 表頭
+    rows.push(['項目','名 稱','數量','單位','單價','總價','備註']);
+
+    // 逐章節輸出
+    let chapterIdx = 0;
+    orderedCats.forEach(cat => {
+      const list = (groupsRaw[cat] || []).filter(it => Math.round(Number(it.amount)||0) > 0);
+      if (list.length === 0) return;
+      const cn = CN_ORDER[chapterIdx] || '';
+      rows.push([`${cn}\t${cat}`]); // 章節列
+      chapterIdx++;
+
+      list.forEach((it, i) => {
+        const qty  = Number(it.qty || 0);
+        const amt  = Math.round(Number(it.amount)||0);
+        const unit = guessUnitFromDesc(it.description) || (it.category==='床架' ? '組' : '');
+        const unitPrice = qty > 0 ? Math.round(amt / qty) : amt;
+
+        rows.push([
+          String(i+1),
+          String(it.name || ''),
+          qty || '',
+          unit,
+          unitPrice || '',
+          amt || '',
+          String(it.description || '')
+        ]);
+      });
+    });
+
+    // 表尾空一行
+    rows.push([]);
+    // 表尾小計/稅額/總計 + 金額中文大寫
+    rows.push(['', '', '', '小 計:', '', subtotal]);
+    rows.push(['', '', '', '稅 額:', '', tax]);
+    rows.push(['總計:', '', '', '', '元正', ntToChinese(grandTotal)]);
+    rows.push([]);
+
+    // 備註（照範本示意）
+    rows.push(['◆ 未含主燈/吊燈/壁燈/家具/窗簾/冷氣/陽台工程']);
+    rows.push(['◆ 未含消防灑水改管/偵煙器移位/緊急壓扣未移/對講機移位工程/全式除濕機/IH爐']);
+
+    // 建立工作簿/工作表
+    const wb = XLSX.utils.book_new();
+    const ws = XLSX.utils.aoa_to_sheet(rows);
+
+    // 欄寬
+    ws['!cols'] = [
+      { wch: 8 },   // 項目
+      { wch: 38 },  // 名稱
+      { wch: 8 },   // 數量
+      { wch: 8 },   // 單位
+      { wch: 12 },  // 單價
+      { wch: 14 },  // 總價
+      { wch: 28 }   // 備註
     ];
 
-    const grouped = {};
-    PRICING_STATE.items.forEach(it => {
-      if (!grouped[it.category]) grouped[it.category] = [];
-      grouped[it.category].push(it);
-    });
+    // 合併儲存格：抬頭/聯絡資訊/標題/業主與日期區塊
+    ws['!merges'] = [
+      // A1:G1、A2:G2、A3:G3
+      { s:{r:0,c:0}, e:{r:0,c:6} },
+      { s:{r:1,c:0}, e:{r:1,c:6} },
+      { s:{r:2,c:0}, e:{r:2,c:6} },
+      // A4:D4、E4:G4
+      { s:{r:3,c:0}, e:{r:3,c:3} },
+      { s:{r:3,c:4}, e:{r:3,c:6} },
+      // A5:D5、E5:G5（地址/坪數那行，若你不想合併可移除）
+      { s:{r:4,c:0}, e:{r:4,c:3} },
+      { s:{r:4,c:4}, e:{r:4,c:6} }
+    ];
 
-    const wsData = [];
-    wsData.push(["報價單"]); wsData.push([]);
-    wsData.push(["=== 客戶資料 ==="]);
-    clientData.forEach(row => wsData.push(row));
-    wsData.push([]);
+    // 數字欄位（單價、總價）標成數字，讓 Excel 可加總
+    const range = XLSX.utils.decode_range(ws['!ref']);
+    for (let R = 0; R <= range.e.r; R++) {
+      // 第 4 列(索引 3)之後才有表格
+      const cUnitPrice = 4, cAmount = 5;
+      const cellUP = ws[XLSX.utils.encode_cell({ r:R, c:cUnitPrice })];
+      const cellAmt= ws[XLSX.utils.encode_cell({ r:R, c:cAmount })];
+      if (cellUP && typeof cellUP.v === 'number') cellUP.t = 'n';
+      if (cellAmt && typeof cellAmt.v === 'number') cellAmt.t = 'n';
+    }
 
-    Object.keys(grouped).forEach(cat => {
-      wsData.push([cat]);
-      let sub = 0;
-      grouped[cat].forEach(it => {
-        sub += it.amount;
-        wsData.push(["", it.name, it.qty, it.description, `NT$ ${it.amount.toLocaleString()}`]);
-      });
-      wsData.push(["", "小計", "", "", `NT$ ${sub.toLocaleString()}`]);
-      wsData.push([]);
-    });
-
-    wsData.push(["總金額", "", "", "", `NT$ ${PRICING_STATE.total.toLocaleString()}`]);
-
-    const wb = XLSX.utils.book_new();
-    const ws = XLSX.utils.aoa_to_sheet(wsData);
-    XLSX.utils.book_append_sheet(wb, ws, "報價單");
-    XLSX.writeFile(wb, "室內裝修報價單.xlsx");
+    XLSX.utils.book_append_sheet(wb, ws, '工程預估');
+    const ts = new Date().toISOString().slice(0,19).replace(/[-:T]/g,'');
+    XLSX.writeFile(wb, `工程預估_${ts}.xlsx`);
   }
+</script>
 
   // ========= 儲存 =========
   function _collectRawForm(){
