--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     .sticky-top { z-index: 50; }
   </style>
 
-  <!-- 簡易密碼門禁（如不需要可以整段移除） -->
+  <!-- 簟易密碼門禁（如不需要可以整段移除） -->
   <script>
     (function () {
       var pass = prompt("請輸入密碼以訪問報價系統");
@@ -536,6 +536,9 @@
   const API_URL = '/api/save-quote';
   const _toInt = (n) => Math.round(Number(n) || 0);
 
+  // 新增：目前操作的報價 ID（帶著它可更新原紀錄）
+  let CURRENT_QUOTE_ID = null;
+
   function _validateBeforeSave() {
     const basePing = parseFloat(document.getElementById('base_ping').value) || 0;
     if (basePing < 12) throw new Error('請先輸入基準坪數（至少 12 坪）');
@@ -550,8 +553,16 @@
 
   document.addEventListener('DOMContentLoaded', function () {
     const today = new Date();
-    document.getElementById('date').value = today.toISOString().split('T')[0];
-    calculatePricing();
+    const dateEl = document.getElementById('date');
+    if (!dateEl.value) dateEl.value = today.toISOString().split('T')[0];
+
+    // 若網址有 ?id= 直接載入可編輯
+    const id = new URLSearchParams(location.search).get('id');
+    if (id) {
+      loadQuoteById(id);
+    } else {
+      calculatePricing();
+    }
   });
 
   function toggleCustomInput(fieldName) {
@@ -818,7 +829,7 @@
       });
       return sum;
     }
-    const woodworkTotal = collectDyn('woodwork-list','木作工程');
+    collectDyn('woodwork-list','木作工程');
 
     // ---- 床架
     let bedFramesSum = 0, idx = 1;
@@ -833,18 +844,18 @@
     });
 
     // ---- 系統櫃（動態）
-    const systemCatTotal = collectDyn('system-list','系統櫃');
-    let systemTotal = systemCatTotal + bedFramesSum;
+    collectDyn('system-list','系統櫃');
 
     // ---- 鐵件拉門
     const ironSlidingDoor = parseFloat(document.getElementById('iron_sliding_door').value) || 0;
     if (ironSlidingDoor > 0) addLine('鐵件拉門', '鐵件拉門(含五金)', ironSlidingDoor, `${ironSlidingDoor}樘 × 28000`, ironSlidingDoor * 28000);
 
-    // ---- 開關面板（注意：不要再宣告 basePing）
+    // ---- 開關面板
     let spPrice = 0, spDesc = '';
+    const basePing2 = basePing;
     const sp = document.getElementById('switch_panel').value;
-    if (sp === 'starlight') { spPrice = 7000 + (basePing - 12) * 600; spDesc = `星光 - 基數7000+(${basePing}-12)*600`; }
-    else if (sp === 'risna') { spPrice = 9000 + (basePing - 12) * 700; spDesc = `Risna - 基數9000+(${basePing}-12)*700`; }
+    if (sp === 'starlight') { spPrice = 7000 + (basePing2 - 12) * 600; spDesc = `星光 - 基數7000+(${basePing2}-12)*600`; }
+    else if (sp === 'risna') { spPrice = 9000 + (basePing2 - 12) * 700; spDesc = `Risna - 基數9000+(${basePing2}-12)*700`; }
     spPrice = R(spPrice);
     document.getElementById('switch_panel_calc').value = money(spPrice);
     addLine('開關面板', '開關面板', 1, spDesc, spPrice);
@@ -1014,25 +1025,21 @@
     const styleText  = getStyleValue();
     const roomText   = getRoomTypeValue();
 
-// 依章節分組；排除自動項目的「稅額」與「監工費」（避免重複）
-const groupsRaw = {};
-(PRICING_STATE.items || []).forEach(it => {
-  // 稅額與監工費都不放在「自動項目」章節內
-  if (it.category === '自動項目' && (/稅額/i.test(it.name) || /監工費/i.test(it.name))) return;
+    // 依章節分組；排除自動項目的「稅額」與「監工費」（避免重複）
+    const groupsRaw = {};
+    (PRICING_STATE.items || []).forEach(it => {
+      if (it.category === '自動項目' && (/稅額/i.test(it.name) || /監工費/i.test(it.name))) return;
+      const cat = CHAPTER_TITLE_MAP[it.category] || it.category || '其他工程';
+      if (!groupsRaw[cat]) groupsRaw[cat] = [];
+      groupsRaw[cat].push(it);
+    });
 
-  const cat = CHAPTER_TITLE_MAP[it.category] || it.category || '其他工程';
-  if (!groupsRaw[cat]) groupsRaw[cat] = [];
-  groupsRaw[cat].push(it);
-});
-
-// 監工費改獨立章節（只保留一次）
-const supervisionItem = (PRICING_STATE.items || [])
-  .find(i => i.category === '自動項目' && /監工費/i.test(i.name));
-if (supervisionItem) {
-  // 名稱可以固定一下，避免顯示成多種寫法
-  groupsRaw['監工費8%~10%'] = [{ ...supervisionItem, name: '監工費(8%)' }];
-}
-
+    // 監工費改獨立章節（只保留一次）
+    const supervisionItem = (PRICING_STATE.items || [])
+      .find(i => i.category === '自動項目' && /監工費/i.test(i.name));
+    if (supervisionItem) {
+      groupsRaw['監工費8%~10%'] = [{ ...supervisionItem, name: '監工費(8%)' }];
+    }
 
     const PREFERRED_ORDER = [
       '木作工程','櫃體工程','天花板工程','油漆工程','水電工程',
@@ -1054,7 +1061,7 @@ if (supervisionItem) {
 
     let chapterIdx = 0;
     orderedCats.forEach(cat => {
-      const listAll = (groupsRaw[cat] || []);
+           const listAll = (groupsRaw[cat] || []);
       const list = listAll.filter(it => Math.round(Number(it.amount)||0) > 0);
       if (list.length === 0) return;
 
@@ -1067,14 +1074,15 @@ if (supervisionItem) {
       list.forEach((it, i) => {
         const qty = Number(it.qty || 0) || 0;
         const amt = Math.round(Number(it.amount)||0);
-        // 客戶版名稱淨化
-        const name = client ? sanitizeNameForClient(it.name) || it.name : it.name;
+        const name = client ? (sanitizeNameForClient(it.name) || it.name) : it.name;
+
         // 單位：床架固定"組"；若抓不到則補"式"
         let unit = (it.category==='床架') ? '組' : (guessUnitFromDesc(it.description) || '');
         if (!unit) unit = '式';
+
         // 單價：有數量才顯示，否則用總價
         const unitPrice = qty > 0 ? Math.round(amt / qty) : amt;
-        // 備註：客戶版本清空
+
         const note = client ? '' : (it.description || '');
         rows.push([
           String(i+1),
@@ -1089,21 +1097,25 @@ if (supervisionItem) {
       });
     });
 
+    // 匯總
     const tax  = Math.round(Number(String(document.getElementById('tax').value).replace(/[^\d.-]/g,'')) || 0);
     const grandTotal = Math.round(Number(String(document.getElementById('total-price').textContent).replace(/[^\d.-]/g,'')) || 0);
     const subtotal   = Math.max(0, grandTotal - tax);
 
-rows.push([]);
-rows.push(['', '', '', '小 計:', '', subtotal]);         // 小計數字落在「總價」欄
-rows.push(['', '', '', '稅 額:', '', tax]);             // 稅額數字落在「總價」欄
-rows.push(['總計:', '', '', '', '元正', ntToChinese(grandTotal)]); // 總計行顯示中文大寫
-rows.push([]);
+    rows.push([]);
+    // 讓數字落在「總價」欄；右側小計欄空白
+    rows.push(['', '', '', '小 計:', '', subtotal, '', '']);
+    rows.push(['', '', '', '稅 額:', '', tax, '', '']);
+    // 「總計」列：把中文大寫放到「總價」欄，單價欄顯示「元正」
+    rows.push(['總計:', '', '', '', '元正', ntToChinese(grandTotal), '', '']);
+    rows.push([]);
     rows.push(['◆ 未含主燈/吊燈/壁燈/家具/窗簾/冷氣/陽台工程']);
     rows.push(['◆ 未含消防灑水改管/偵煙器移位/緊急壓扣未移/對講機移位工程/全式除濕機/IH爐']);
 
     return rows;
   }
 
+  /* ---------- Excel 工作簿 ---------- */
   function buildWorkbook(rows, sheetName='工程預估'){
     const wb = XLSX.utils.book_new();
     const ws = XLSX.utils.aoa_to_sheet(rows);
@@ -1115,7 +1127,7 @@ rows.push([]);
       { wch: 8 },  // 數量
       { wch: 8 },  // 單位
       { wch: 12 }, // 單價
-      { wch: 14 }, // 總價
+      { wch: 18 }, // 總價
       { wch: 28 }, // 備註
       { wch: 12 }  // 小計
     ];
@@ -1156,7 +1168,9 @@ rows.push([]);
     XLSX.writeFile(wb, `工程預估_客戶版_${ts}.xlsx`);
   }
 
-  // ========= 儲存到資料庫 =========
+  /* ---------- 儲存 / 載入（可再次編輯） ---------- */
+
+  // 收集目前表單（僅固定欄位；動態列由 items 還原）
   function _collectRawForm(){
     const obj = {};
     document.querySelectorAll('#quotationForm input, #quotationForm select').forEach(el=>{
@@ -1166,29 +1180,32 @@ rows.push([]);
     });
     return obj;
   }
+
   async function _postPayload(url, payload){
-    const bodyText = JSON.stringify(payload);
-    const tryOnce = async (ctype) => {
-      const resp = await fetch(url, {
-        method: 'POST',
-        headers: { 'Content-Type': ctype, 'Accept': 'application/json' },
-        body: bodyText
-      });
-      const text = await resp.text();
-      let data = null;
-      try { data = text ? JSON.parse(text) : null; } catch {}
-      return { resp, text, data };
-    };
-    let r = await tryOnce('application/json');
-    if (!r.resp.ok && ((r.text || '').includes('Unexpected end of JSON input') || r.resp.status >= 500)) {
-      r = await tryOnce('text/plain');
-    }
-    if (!r.resp.ok) {
-      const msg = (r.data && (r.data.error || r.data.message)) || r.text || `HTTP ${r.resp.status}`;
+    const resp = await fetch(url, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json', 'Accept': 'application/json' },
+      body: JSON.stringify(payload)
+    });
+    const text = await resp.text();
+    let data = null;
+    try { data = text ? JSON.parse(text) : null; } catch {}
+    if (!resp.ok) {
+      const msg = (data && (data.error || data.message)) || text || `HTTP ${resp.status}`;
       throw new Error(msg);
     }
-    return r.data || { ok: true };
+    return data || { ok: true };
   }
+  async function _fetchJSON(url){
+    const r = await fetch(url);
+    const t = await r.text();
+    let d = null;
+    try { d = t ? JSON.parse(t) : null; } catch {}
+    if (!r.ok) throw new Error((d && (d.error||d.message)) || t || `HTTP ${r.status}`);
+    return d;
+  }
+
+  // 儲存（若有 CURRENT_QUOTE_ID 則更新）
   async function saveQuote(){
     const btn = document.querySelector('button[onclick="saveQuote()"]');
     try{
@@ -1220,22 +1237,19 @@ rows.push([]);
         style:       style || null,
         room_type:   room || null,
         base_ping:   Number(raw['base_ping']) || null,
-
-        // 用目前總價拆回小計 / 其他 / 監工 / 稅
         subtotal:        Math.max(0, grand - other3 - supervise8 - tax5),
         other_items:     other3,
         supervision_fee: supervise8,
         tax:             tax5,
         grand_total:     grand,
-
-        // 原始表單（方便之後回填/查詢）
         form: raw
       };
 
-      const payload = { quote, items: sanitizedItems };
-      const data = await _postPayload(API_URL, payload);
+      const payload = { id: CURRENT_QUOTE_ID || null, quote, items: sanitizedItems };
+      const data = await _postPayload('/api/save-quote', payload);
 
-      alert('已儲存成功！編號：' + (data?.id || data?.insertedId || '—'));
+      CURRENT_QUOTE_ID = data?.id || data?.insertedId || CURRENT_QUOTE_ID;
+      alert((payload.id ? '已更新成功！編號：' : '已儲存成功！編號：') + (CURRENT_QUOTE_ID || '—'));
     } catch (err) {
       console.error('SAVE_QUOTE_ERROR:', err);
       alert('儲存失敗：' + (err?.message || String(err)));
@@ -1244,21 +1258,110 @@ rows.push([]);
     }
   }
 
-  // ===== 對外（可在 console 呼叫）=====
-  window.calculatePricing  = calculatePricing;
-  window.exportExcelClient = exportExcelClient;
-  window.exportExcelDetailed = exportExcelDetailed;
-  window.saveQuote         = saveQuote;
-  window.addBedFrame       = addBedFrame;
-  window.removeBedFrame    = removeBedFrame;
-  window.addCustomItem     = addCustomItem;
-  window.removeCustomItem  = removeCustomItem;
-  window.addWoodworkItem   = addWoodworkItem;
-  window.addSystemItem     = addSystemItem;
-  window.addAlumItem       = addAlumItem;
-  window.addTallFrameItem  = addTallFrameItem;
-  window.getStyleValue     = getStyleValue;
-  window.getRoomTypeValue  = getRoomTypeValue;
+  // 依既有 items 重建動態列
+  function _addDynCustomRow(containerId, item){
+    addDynRow(containerId, []); // 用空預設，強制走自訂
+    const row = document.querySelector(`#${containerId} .dyn-row:last-child`);
+    const sel = row.querySelector('.dyn-name');
+    sel.value = 'custom';
+    sel.dispatchEvent(new Event('change'));
+    row.querySelector('.dyn-name-custom').value = item.name || '自訂項目';
+    row.querySelector('.dyn-unit').value = guessUnitFromDesc(item.description) || '式';
+    const qty = item.qty && item.qty>0 ? item.qty : 1;
+    row.querySelector('.dyn-qty').value = qty;
+    row.querySelector('.dyn-price').value = Math.round((item.amount||0)/qty);
+  }
+
+  // 從後端載入指定報價並回填到畫面（可再編輯）
+  async function loadQuoteById(id){
+    try{
+      const data = await _fetchJSON(`/api/quote-detail?id=${encodeURIComponent(id)}`);
+      const quote = data?.quote || data?.data || data;
+      if (!quote) throw new Error('找不到資料');
+
+      CURRENT_QUOTE_ID = quote.id || quote._id || id;
+
+      // 清空動態容器
+      ['woodwork-list','system-list','alum-list','tallframe-list','custom-items-container'].forEach(cid => {
+        const el = document.getElementById(cid);
+        if (el) el.innerHTML = '';
+      });
+      const bedWrap = document.getElementById('bed-frames-container');
+      if (bedWrap) bedWrap.innerHTML = '';
+      bedFrameCount = 0;
+
+      // 先回填固定欄位（若有保存 form 以它為主）
+      const frm = quote.form || {};
+      Object.keys(frm).forEach(k => {
+        const el = document.getElementById(k);
+        if (!el) return;
+        if (el.type === 'checkbox') el.checked = !!frm[k];
+        else el.value = frm[k];
+      });
+
+      // 再用 items 重建動態列
+      const items = data?.items || quote.items || [];
+      items.forEach(it => {
+        const cat = String(it.category||'');
+        if (cat === '自動項目') return; // 自動計算的不還原
+        if (cat === '木作工程') {
+          _addDynCustomRow('woodwork-list', it);
+        } else if (cat === '系統櫃') {
+          _addDynCustomRow('system-list', it);
+        } else if (cat === '鋁框工程') {
+          // 名稱含「高門框」丟到高門框區，否則丟鋁框吊框區
+          if ((it.name||'').includes('高門框')) _addDynCustomRow('tallframe-list', it);
+          else _addDynCustomRow('alum-list', it);
+        } else if (cat === '床架') {
+          // 盡量還原長寬
+          const m = String(it.description||'').match(/(\d+(?:\.\d+)?)\s*cm\s*[×x]\s*(\d+(?:\.\d+)?)\s*cm/i);
+          addBedFrame();
+          const row = document.querySelector('.bed-frame-row:last-child');
+          if (m) {
+            row.querySelector('.bed-frame-length').value = m[1];
+            row.querySelector('.bed-frame-width').value  = m[2];
+          } else {
+            // 無法解析則用面積=金額，取平方根
+            const side = Math.round(Math.sqrt(Math.max(0, Number(it.amount)||0)));
+            row.querySelector('.bed-frame-length').value = side;
+            row.querySelector('.bed-frame-width').value  = side;
+          }
+        } else if (cat === '其他自訂') {
+          // 其他自訂
+          addCustomItem();
+          const row = document.querySelector('.custom-item-row:last-child');
+          row.querySelector('.ci-name').value  = it.name || '自訂項目';
+          const qty = it.qty && it.qty>0 ? it.qty : 1;
+          row.querySelector('.ci-qty').value   = qty;
+          row.querySelector('.ci-price').value = Math.round((it.amount||0)/qty);
+          row.querySelector('.ci-unit').value  = guessUnitFromDesc(it.description) || '';
+        }
+        // 其餘（例如開關面板/玻璃/清運…）通常已在 form 內回填
+      });
+
+      calculatePricing();
+    } catch (e){
+      console.error('LOAD_QUOTE_ERROR:', e);
+      alert('載入失敗：' + (e?.message || String(e)));
+      calculatePricing();
+    }
+  }
+
+  // 對外（可在 console 呼叫）
+  window.calculatePricing     = calculatePricing;
+  window.exportExcelClient    = exportExcelClient;
+  window.exportExcelDetailed  = exportExcelDetailed;
+  window.saveQuote            = saveQuote;
+  window.loadQuoteById        = loadQuoteById;
+  window.addBedFrame          = addBedFrame;
+  window.removeBedFrame       = removeBedFrame;
+  window.addCustomItem        = addCustomItem;
+  window.removeCustomItem     = removeCustomItem;
+  window.addWoodworkItem      = addWoodworkItem;
+  window.addSystemItem        = addSystemItem;
+  window.addAlumItem          = addAlumItem;
+  window.addTallFrameItem     = addTallFrameItem;
+  window.getStyleValue        = getStyleValue;
+  window.getRoomTypeValue     = getRoomTypeValue;
 </script>
-</body>
-</html>
+
